# pcap_test

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  instructions.md  interview.md  interview_generic.md
include/: PcapDirectoryProcessor.h  PcapFileReader.h  StatsAggregator.h
scratchpad/: CMakeLists.txt  Readme.md  read_net_inerface.cpp  testpcap1.cpp
src/: PcapDirectoryProcessor.cpp  PcapFileReader.cpp  StatsAggregator.cpp  main.cpp
tests/: StatsAggregatorTests.cpp
